# file-mcp

./: .dockerignore  .gitignore  AGENTS.md  CONVERSION_PROGRESS.md  DEPLOYMENT.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  WORK_SESSION_ARCHIVE.md  nacos-config-example.yaml  pyproject.toml  test_conversion.py  test_enhanced_conversion.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMPLETION_REPORT.md  IMPLEMENTATION_STATUS.md  NACOS-QUICKSTART.md  NACOS.md  code_review_report.md  docker-deployment.md  frontend-integration.md
docs/agents/: domain.md  issue-tracker.md
format_export_mcp/: Dockerfile  README.md  __init__.py  docker-compose.yml  nginx.format-export.conf  requirements.txt  server_common.py  server_sse.py  server_stdio.py  server_streamable_http.py
format_export_mcp/conversion/: __init__.py  conversion_matrix.py  file_document_convert.py  router.py
format_export_mcp/export/: __init__.py  service.py
format_export_mcp/mcp/: __init__.py  tools.py
format_export_mcp/nacos/: __init__.py  client.py  config.py  manager.py
format_export_mcp/storage/: manager.py
format_export_mcp/tools/: __init__.py  csv_generator.py  doc_generator.py  document_convert.py  docx_generator.py  export_document.py  html_generator.py  pdf_generator.py  storage.py  tabular.py  xls_generator.py  xlsx_generator.py
format_export_mcp/utils/: command_utils.py  format_utils.py  image_sources.py  (+3 more)
scripts/: test-nacos.sh
test_files/: sample.docx
tests/: test_conversion_service_edge_cases.py  test_export_document_formats.py  test_input_loader_edge_cases.py  test_nacos_manager.py  test_nacos_v2_client.py  test_pdf_to_docx.py
(+28 files in other folders)
