[project]
name = "file-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.0",
    "python-docx>=1.1.2",
    "reportlab>=4.2.5",
    "starlette>=0.37.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["format_export_mcp"]

[project.scripts]
format-export-stdio = "format_export_mcp.server_stdio:main"
format-export-sse = "format_export_mcp.server_sse:main"
format-export-http = "format_export_mcp.server_streamable_http:main"
format-export-streamable-http = "format_export_mcp.server_streamable_http:main"
