[project]
name = "file-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastmcp>=2.12.0",
    "markdown>=3.7",
    "PyMuPDF>=1.24.10",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
    "reportlab>=4.2.5",
    "starlette>=0.37.2",
    "nacos-sdk-python>=3.2,<4",
    "PyYAML>=6.0",
    "pdf2docx>=0.5.8",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["format_export_mcp"]

[project.scripts]
format-export-stdio = "format_export_mcp.server_stdio:main"
format-export-sse = "format_export_mcp.server_sse:main"
format-export-http = "format_export_mcp.server_streamable_http:main"
format-export-streamable-http = "format_export_mcp.server_streamable_http:main"
